--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         }
     ],
     "require": {
-        "php":             ">=5.3.0",
-        "symfony/symfony": ">=2.0",
-        "doctrine/common": ">=2.2"
+        "php":             ">=5.3.3",
+        "symfony/symfony": "~2.0",
+        "doctrine/cache":  "~1.0"
     },
     "autoload": {
         "psr-0": {
